# bvd

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  security.yml
examples/terraform/: example.tf
src/bvd/: __init__.py  cli.py  core.py  semver.py  types.py
src/bvd/parsers/: __init__.py  base.py  terraform.py
tests/: test_abstract_coverage.py  test_advanced_integration.py  test_basic.py  test_cli.py  test_coverage_completion.py  test_edge_cases.py  test_issue_detection.py  test_performance.py
tests/integration/: test_advanced_integration.py  test_integration.py
tests/performance/: test_performance.py
tests/unit/: test_cli.py  test_core.py  test_diff_logic.py  test_edge_cases.py  test_issue_detection.py  test_semver.py
tests/unit/parsers/: test_base.py  test_terraform.py
