[project]
name = "bvd"
version = "0.1.0"
description = "Breaking Version Detector - Extensible tool for detecting breaking dependency version changes"
readme = "README.md"
authors = [{ name = "Zack Kollar", email = "me@seedyrom.io" }]
requires-python = ">=3.10"
dependencies = ["packaging~=25.0", "click~=8.0", "python-hcl2~=7.3.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bvd = "bvd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bvd"]

[tool.hatch.build.targets.sdist]
exclude = [
  ".python-version",
  "/.git",
  "/tests",
  "*.pyc",
  "__pycache__"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I"]


[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = true
precision = 2

[dependency-groups]
dev = [
    "invoke~=2.2.0",
    "pre-commit~=4.3.0",
    "psutil~=7.0.0",
    "pytest~=8.4.1",
    "pytest-cov~=7.0.0",
    "ruff~=0.12.5",
    "types-psutil~=7.0.0.20250601",
]
